# l5

./: Cargo.toml  README.md
.pages/pkg/: .gitignore  l5.js  l5_bg.wasm
docs/: index.html
docs/pkg/: l5.js
src/: application.rs  game.rs  main.rs
ui/: appwindow.slint  models.slint
ui/control/: controls.slint  letter.slint  word.slint
ui/control/keyboard/: keyboard.slint  keyboard_ru.slint  keybutton.slint
